# bluesky-direct-control-service

./: Dockerfile  README.md  direct-device-control-service-openapi.yaml  pyproject.toml
docs/: api.md
src/direct_control/: __init__.py  _array_metadata.py  auth_client.py  cli.py  config.py  coordination_client.py  device_controller.py  main.py  models.py  protocols.py  registry_client.py
src/direct_control/monitoring/: __init__.py  _envelopes.py  describers.py  device_websocket_manager.py  pv_monitor.py  websocket_manager.py
tests/: conftest.py  test_epics_integration.py  test_ioc.py  test_smoke.py
